# combine-mcp

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  config.example.json  go.mod  install.sh  mcp-test-config.json
.github/workflows/: release.yml
cmd/: main.go
examples/test-server/: main.go
pkg/aggregator/: aggregator.go  aggregator_test.go
pkg/config/: config.go  config_test.go  tool_filtering_test.go
pkg/logger/: logger.go
pkg/stdio/: server.go
src/: aggregator.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  server.rs
